# gedit-macro-plugin

./: ProjectHome.md
macro/: Makefile.am  gedit-macro-plugin.c  gedit-macro-plugin.h
trunk/macro/: gedit-macro-plugin.c  macro.gedit-plugin.desktop.in
